--- a/week3/Sung Lee Assignment 3.Rmd
+++ b/week3/Sung Lee Assignment 3.Rmd
@@ -64,14 +64,84 @@ output:
 
 3. Describe, in words, what these expressions will match:
 
-    (.)\1\1  
-    "(.)(.)\\2\\1"  
-    (..)\1  
-    "(.).\\1.\\1"  
-    "(.)(.)(.).*\\3\\2\\1"  
+    **(.)\1\1**  
+    This expression matches on characters, except line breaks, that is followed by a "\1\1". Examples would be "b\1\1", "c\1\1", or "5\1\1".   
+
+    ```{r}
+    x <- c("b\1\1", "c\1\1", "hello\1\1", "yellow")
+    str_match(x, '(.)\1\1')  
+    ```
     
     
+    **"(.)(.)\\2\\1"**  
+    This expression matches strings that contain pairs of characters, excluding line breaks, that are followed by a reverse of their order. Examples would be "abba", "0101", or "daad".  
     
+    ```{r}
+    x <- c("abba", "0110", "ACTGGTCA", "yellow")
+    str_match(x, "(.)(.)\\2\\1")  
+    ```
+    
+    **(..)\1**  
+    This expression matches strings that have a couple of characters, excluding line breaks, that are followed by a "\1". Examples would be "ab\1", "54\1", or "11\1".  
+    
+    ```{r}
+    x <- c("ab\1", "red", "A\1", "AABBCC\1")
+    str_match(x, '(..)\1')  
+    ```    
+    
+    
+    **"(.).\\1.\\1"**
+    This expression matches strings that contain a character that repeats in the 2 and 4 places over from its first occurrence. Examples would be "a0a1a", "c1d1e1", and "-1-2-3". 
+    
+    ```{r}
+    x <- c("a0a1a", "blue", "c1d1e1", "-1-2-3")
+    str_match(x, "(.).\\1.\\1")
+    ```    
+        
+    
+    **(.)(.)(.).*\\3\\2\\1**
+    This expression matches any sequence of strings that are encapsulated by 3 characters, excluding line breaks, where the end string is a reverse order of those 3 characters. Examples would be "abcjfkdjkfjicba", "0110Middleofthestring110".
+    
+    ```{r}
+    x <- c("abcjfkdjkfjicba", "redyellow001middle100kdlskdls", "beginbegin1middlegebend", "98&^A")
+    str_match(x, "(.)(.)(.).*\\3\\2\\1")  #Note the \ needs to be escaped in the expression.
+    
+    ```
+
+<br>
+
+4. Construct regular expressions to match words that  
+
+    Start and end with the same character:  
+    "^(.)(.*)\\1$"
+
+    ```{r}
+    x <- c("amiddleofthestringa", "0red,yellow,green0", "red", "9*&^(^Hjshjshf9")
+    str_match(x, "^(.)(.*)\\1$")  #Note the \ needs to be escaped in the expression.
+    
+    ```
+    
+    Contain a repeated pair of letters (e.g. "church" contains "ch" repeated twice.):  
+    "(..)(.*)\\1"
+    
+    ```{r}
+    x <- c("church", "blue", "red", "abracadabra")
+    str_match(x, "(..)(.*)\\1")  #Note the \ needs to be escaped in the expression.
+    
+    ```
+    
+    Contain one letter repeated in at least three places (e.g. "eleven" contains three "e"s.)  
+    "(.)(.*)\\1(.*)\\1"
+    
+    ```{r}
+    x <- c("eleven", "blue", "010001001010", "yellow submarine light")
+    str_match(x, "(.)(.*)\\1(.*)\\1")  #Note the \ needs to be escaped in the expression.
+    
+    ```    
+    
+    
+
+
 
 
 
