--- a/Project 1/Sung Lee Project 1.Rmd
+++ b/Project 1/Sung Lee Project 1.Rmd
@@ -7,3 +7,47 @@ output:
   df_print: paged
 ---
 
+[Project on RPubs](https://rpubs.com/logicalschema/data607_project1 "Sung's Project 1 Assignment Rpubs")
+<br>
+[Rmd on Github](https://github.com/logicalschema/DATA607/blob/master/Project%201/Sung%20Lee%20Project%201.Rmd "Sung's Project 1 Assignment Github")
+
+
+## Introduction  
+This project will read the Chess tournament text file hosted on Github at https://raw.githubusercontent.com/logicalschema/DATA607/master/Project%201/tournamentinfo.txt and will generate a CSV file. The following format will be the CSV file:
+
+
+Player's Name | Player's State | Total Number of Points | Player's Pre-Rating | Average Pre-Chess Rating of Opponents
+--------------|----------------|------------------------|---------------------|---------------------------------------
+Gary Hua      | ON             | 6.0                    | 1794                | 1605
+
+
+```{r}
+library(stringr)
+
+options(warn=-1) # Turning off warnings with reading the text file
+
+textFile <- readLines("https://raw.githubusercontent.com/logicalschema/DATA607/master/Project%201/tournamentinfo.txt")
+options(warn=0) # Turning warnings back on
+
+head(textFile)
+
+i <- 5  # Skipping the header rows and lines that have --------------------
+while (i <= length(textFile)) {
+  row1 <- unlist(strsplit(textFile[i], split='|', fixed=TRUE))
+  row2 <- unlist(strsplit(textFile[i + 1],  split ='|', fixed=TRUE))
+  
+
+  
+  
+  
+  i <- i + 3
+}
+
+ 
+length(row1)
+print(row1[1])
+
+
+
+
+```
