--- a/Project 1/Sung Lee Project 1.Rmd
+++ b/Project 1/Sung Lee Project 1.Rmd
@@ -13,14 +13,16 @@ output:
 
 
 ## Introduction  
-This project will read the Chess tournament text file hosted on Github at https://raw.githubusercontent.com/logicalschema/DATA607/master/Project%201/tournamentinfo.txt and will generate a CSV file. The following format will be the CSV file tjat will be exported:
+This project will read the Chess tournament text file hosted on Github at https://raw.githubusercontent.com/logicalschema/DATA607/master/Project%201/tournamentinfo.txt and will generate a CSV file. We will only be interested in the player's wins, losses, and draws with other opponents. 
+
+The following format will be the CSV file that will be exported:
 
 
 Player's Name | Player's State | Total Number of Points | Player's Pre-Rating | Average Pre-Chess Rating of Opponents
 --------------|----------------|------------------------|---------------------|---------------------------------------
 Gary Hua      | ON             | 6.0                    | 1794                | 1605
 
-I will add another column named Player's ID. This is for internal purposes.
+I will add other columns named player's ID, player's number of games, and player's opponents. These are for internal purposes.
 
 ```{r}
 library(stringr)
@@ -30,37 +32,70 @@ options(warn=-1) # Turning off warnings with reading the text file
 textFile <- readLines("https://raw.githubusercontent.com/logicalschema/DATA607/master/Project%201/tournamentinfo.txt")
 options(warn=0) # Turning warnings back on
 
-head(textFile)
+head(textFile, 13)
+
+#Create internal dataframe
+playerData <- data.frame(matrix(ncol = 7, nrow = 0))
+playerInfo <- c("ID", "Name", "State", "totalPoints" ,"preRating", "NumberofGames", "Opponents")
+colnames(playerData) <- playerInfo
+
+
 
 i <- 5  # Skipping the header rows and lines that have --------------------
 while (i <= length(textFile)) {
   row1 <- unlist(strsplit(textFile[i], split='|', fixed=TRUE))
   row2 <- unlist(strsplit(textFile[i + 1],  split ='|', fixed=TRUE))
   
+  #Get the player's id
+  playerID <- as.numeric(str_trim(row1[1]))
 
+  #Get the player's name
+  playerName <- str_trim(row1[2])
+
+  #Get the player's state
+  playerState <- str_trim(row2[1])
+
+  #Get the player's total number of points
+  playertotalPoints <- as.numeric(str_trim(row1[3]))
+
+  #Get the player's pre-rating
+  playerpreRating <- str_match(str_trim(row2[2]), "R:(.*?)->")[,2]    #Grab the text between R: and the ->
+  playerpreRating <- as.numeric(str_remove(str_trim(playerpreRating), 'P(.*)$')) #Remove non-numeric characters
+
+  #Get the player's number of games played in the tournament: counting only wins, losses, and draws
+  #Also, get the player's opponents
+  playerNumberofGames <- 0
+  playerOpponents <- ""
+
+  for (j in 4:10) {
+   rowValue <- row1[j]
+   if ( grepl('W', rowValue) || grepl('L', rowValue) || grepl('D', rowValue)) {
+     playerNumberofGames <- playerNumberofGames + 1
+   }
+   
+   playerOpponents <- paste(playerOpponents, str_match(rowValue, '\\d+'), sep = ",")
+  }
+
+  playerOpponents <- str_remove(playerOpponents, '^,') #Remove leading ,
+
+  
+#  playerData ("ID", "Name", "State", "totalPoints" ,"preRating", "NumberofGames", "Opponents")
+  
+  
+  newRow <- data.frame(playerID, playerName, playerState, playertotalPoints, playerpreRating, playerNumberofGames, playerOpponents)
+  playerData <- rbind(playerData, newRow)
+  
+  #playerData
   
   i <- i + 3
 }
 
-#Get the player's id
-playerID <- str_trim(row1[1])
-
-#Get the player's name
-playerName <- str_trim(row1[2])
-print(playerName)
-
-#Get the player's state
-playerState <- str_trim(row2[1])
-print(playerState)
-
-#Get the player's total number of points
-playertotalPoints <- as.numeric(str_trim(row1[3]))
-print(playertotalPoints)
-
-#Get the player's pre-rating
-playerpreRating <- str_match(str_trim(row2[2]), "R:(.*?)->")[,2]    #Grab the text between R: and the ->
-playerpreRating <- as.numeric(str_remove(str_trim(playerpreRating), 'P(.*)$')) #Remove non-numeric characters
-print(playerpreRating)
-
+head(playerData, 10)
 
 ```
+
+## Average Pre-chess Rating of Opponents
+
+With the player information dataframe created. Next, I will create the column average pre-chess rating of opponents for each player.
+
+
