--- a/Project 1/Sung-Lee-Project-1.Rmd
+++ b/Project 1/Sung-Lee-Project-1.Rmd
@@ -34,104 +34,10 @@ options(warn=0) # Turning warnings back on
 
 head(textFile, 13)
 
-#Create internal dataframe
+
 playerData <- data.frame(matrix(ncol = 7, nrow = 0))
-names(playerData) <- c("ID", "Name", "State", "totalPoints" ,"preRating", "NumberofGames", "Opponents")
-
-
-
-i <- 5  # Skipping the header rows and lines that have --------------------
-while (i <= length(textFile)) {
-  row1 <- unlist(strsplit(textFile[i], split='|', fixed=TRUE))
-  row2 <- unlist(strsplit(textFile[i + 1],  split ='|', fixed=TRUE))
-  
-  #Get the player's id
-  playerID <- as.numeric(str_trim(row1[1]))
-
-  #Get the player's name
-  playerName <- str_trim(row1[2])
-
-  #Get the player's state
-  playerState <- str_trim(row2[1])
-
-  #Get the player's total number of points
-  playertotalPoints <- as.numeric(str_trim(row1[3]))
-
-  #Get the player's pre-rating
-  playerpreRating <- str_match(str_trim(row2[2]), "R:(.*?)->")[,2]    #Grab the text between R: and the ->
-  playerpreRating <- as.numeric(str_remove(str_trim(playerpreRating), 'P(.*)$')) #Remove non-numeric characters
-
-  #Get the player's number of games played in the tournament: counting only wins, losses, and draws
-  #Also, get the player's opponents
-  playerNumberofGames <- 0
-  playerOpponents <- vector()
-
-  for (j in 4:10) {
-   rowValue <- row1[j]
-   if ( grepl('W', rowValue) || grepl('L', rowValue) || grepl('D', rowValue)) {
-     playerNumberofGames <- playerNumberofGames + 1
-   }
-   
-   #playerOpponents <- paste(playerOpponents, str_match(rowValue, '\\d+'), sep = ",")
-   playerOpponents <- c(playerOpponents, as.numeric(str_match(rowValue, '\\d+')))
-  }
-
-  #playerOpponents <- str_remove(playerOpponents, '^,') #Remove leading ,
-  
-
-  #"ID", "Name", "State", "totalPoints" ,"preRating", "NumberofGames", "Opponents"
-  
-  newRow <- data.frame(playerID, playerName, playerState, playertotalPoints, playerpreRating, playerNumberofGames, playerOpponents)
-  playerData <- rbind(playerData, newRow)
-  
-  i <- i + 3
-}
-
-head(playerData, 10)
-
-```
-
----
-title: "Sung Lee Project 1"
-author: "Sung Lee"
-date: "2/13/2020"
-output: 
- html_document: 
-  df_print: paged
----
-
-[Project on RPubs](https://rpubs.com/logicalschema/data607_project1 "Sung's Project 1 Assignment Rpubs")
-<br>
-[Rmd on Github](https://github.com/logicalschema/DATA607/blob/master/Project%201/Sung%20Lee%20Project%201.Rmd "Sung's Project 1 Assignment Github")
-
-
-## Introduction  
-This project will read the Chess tournament text file hosted on Github at https://raw.githubusercontent.com/logicalschema/DATA607/master/Project%201/tournamentinfo.txt and will generate a CSV file. We will only be interested in the player's wins, losses, and draws with other opponents. 
-
-The following format will be the CSV file that will be exported:
-
-
-Player's Name | Player's State | Total Number of Points | Player's Pre-Rating | Average Pre-Chess Rating of Opponents
---------------|----------------|------------------------|---------------------|---------------------------------------
-Gary Hua      | ON             | 6.0                    | 1794                | 1605
-
-I will add other columns named player's ID, player's number of games, and player's opponents. These are for internal purposes.
-
-```{r}
-library(stringr)
-
-options(warn=-1) # Turning off warnings with reading the text file
-
-textFile <- readLines("https://raw.githubusercontent.com/logicalschema/DATA607/master/Project%201/tournamentinfo.txt")
-options(warn=0) # Turning warnings back on
-
-head(textFile, 13)
-
-#Create internal dataframe
-playerData <- data.frame(matrix(ncol = 7, nrow = 0))
-playerInfo <- c("ID", "Name", "State", "totalPoints" ,"preRating", "NumberofGames", "Opponents")
-colnames(playerData) <- playerInfo
-
+x <- c("ID", "Name", "State", "totalPoints" ,"preRating", "NumberofGames", "Opponents")
+names(playerData) <- x
 
 
 i <- 5  # Skipping the header rows and lines that have --------------------
@@ -161,25 +67,23 @@ while (i <= length(textFile)) {
   playerOpponents <- ""
 
   for (j in 4:10) {
-   rowValue <- row1[j]
-   if ( grepl('W', rowValue) || grepl('L', rowValue) || grepl('D', rowValue)) {
-     playerNumberofGames <- playerNumberofGames + 1
-   }
-   
-   playerOpponents <- paste(playerOpponents, str_match(rowValue, '\\d+'), sep = ",")
+    rowValue <- row1[j]
+    if ( grepl('W', rowValue) || grepl('L', rowValue) || grepl('D', rowValue)) {
+       playerNumberofGames <- playerNumberofGames + 1
+     }
+     playerOpponents <- paste(playerOpponents, str_match(rowValue, '\\d+'), sep = ",")
   }
 
   playerOpponents <- str_remove(playerOpponents, '^,') #Remove leading ,
 
-  
-#  playerData ("ID", "Name", "State", "totalPoints" ,"preRating", "NumberofGames", "Opponents")
-  
+
   
   newRow <- data.frame(playerID, playerName, playerState, playertotalPoints, playerpreRating, playerNumberofGames, playerOpponents)
+  x <- c("ID", "Name", "State", "totalPoints" ,"preRating", "NumberofGames", "Opponents")
+names(newRow) <- x
   playerData <- rbind(playerData, newRow)
   
-  #playerData
-  
+
   i <- i + 3
 }
 
@@ -192,23 +96,51 @@ With the player information dataframe created. Next, I will create the column av
 
 ```{r}
 
-#playerData ("playerID", "playerName", "playerState", "playertotalPoints" ,"playerpreRating", "playerNumberofGames", "playerOpponents")
-colnames(playerData)
-nrow(playerData)
+avgOpponent <- data.frame(matrix(ncol = 1, nrow = 0))
+x <- c("averageOpponents")
+names(avgOpponent) <- x
 
 for (i in 1:nrow(playerData)) {
     row <- playerData[i,]
     sum <- 0
     
-#    opponents <- row[7]
-#    for (value in opponents) {
-#       if (is.na(value) == FALSE) {
-#         sum <- sum + playerData[which(playerData$playerID == value), 5]
-#       }
-#    }
+    opponents <-  as.integer(str_split(row[7], ",")[[1]])
+    for (value in opponents) {
+       if (is.na(value) == FALSE) {
+         sum <- sum + playerData[which(playerData$ID == value), 5]
+       }
+    }
     
-#    print(sum / row[6])
+    newRow <- data.frame((sum / row[6]))
+    x <- c("averageOpponents")
+    names(newRow) <- x
+    avgOpponent <- rbind(avgOpponent, newRow)
+  
 }
+
+#Add the new column to playerData
+playerData <- cbind(playerData, avgOpponent)
+
+
+head(playerData)
+
+#Prepare a new dataframe for export
+#"ID", "Name", "State", "totalPoints" ,"preRating", "NumberofGames", "Opponents", "averageOpponents"
+
+exportCSV <- playerData[,c(2,3,4,5,8)]
+x <- c("Player’s Name", "Player’s State", "Total Number of Points", "Player’s Pre-Rating",
+       "Average Pre-Chess Rating of Opponents")
+names(exportCSV) <- x
+
+head(exportCSV, 13)
+```
+
+## Export the CSV
+The following code will export the dataframe `exportCSV` dataframe as a csv file `Chess_Tournament.csv` in the present working directory.
+
+```{r}
+#Export the dataframe as Chess_Tournament.csv
+write.csv(exportCSV,'Chess_Tournament.csv')
 
 ```
 
